[package]
name = "rust-common"
version = "0.1.0"
authors = ["crwkey <crwkey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#[[bin]]
#name="test1"
#path="src/a.rs"
#
#[[bin]]
#name ="test"
#path ="src/b.rs"


